add signed attr api
